log/build_2024-03-03_11-07-03/NIDS_PKG/stderr.log
/home/gmo-pop/.local/lib/python3.10/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG/master_node_script_node.py", line 38
    		self.setfit = SetFitModel.from_pretrained(f"{os.environ["HOME"]}/bertbased_ids/setfit_mobile_siamese", device=device, use_differentiable_head=use_dh)
    		                                                         ^^^^
SyntaxError: f-string: unmatched '['

